--- a/roop/Frontend/templates/index.html
+++ b/roop/Frontend/templates/index.html
@@ -2,6 +2,9 @@
 <html>
 
 <head>
+        <meta charset="utf-8">
+        <title>IA HEROEXME</title>
+        <link rel="shortcut icon" href="{{url_for('static', filename ='images/logo.png')}}" type="image/x-icon">
         <link rel="stylesheet" href="{{url_for('static', filename ='css/index.css')}}">
         <link rel="stylesheet" href="static/css/index.css">
 
@@ -50,6 +53,7 @@
                                         <canvas id="canvas-1" style="display: none;"></canvas>
                                         <video id="video-1" style="display: none;"></video>
                                         <button id="transform-btn-1" data-name="Doctor_Strange" data-video="Doctor_Strange.mp4">Transformar</button>
+                                        <button id="download-btn">Descargar</button>
                                 </div>
                         </div>
                         <div class="item" style="background-image: url(static/images/Wanda.webp);">
@@ -62,6 +66,7 @@
                                         <canvas id="canvas-2" style="display: none;"></canvas>
                                         <video id="video-2" style="display: none;"></video>
                                         <button id="transform-btn-2" data-name="Wanda" data-video="Wanda.mp4">Transformar</button>
+                                        <button id="download-btn">Descargar</button>
                                 </div>
                         </div>
                         <div class="item" style="background-image: url(static/images/cap.webp);">
@@ -74,6 +79,7 @@
                                         <canvas id="canvas-3" style="display: none;"></canvas>
                                         <video id="video-3" style="display: none;"></video>
                                         <button id="transform-btn-3" data-name="Captain_America" data-video="Captain_America.mp4">Transformar</button>
+                                        <button id="download-btn">Descargar</button>
                                 </div>
                         </div>
                         <div class="item" style="background-image: url(static/images/captain.webp);">
@@ -86,6 +92,7 @@
                                         <canvas id="canvas-4" style="display: none;"></canvas>
                                         <video id="video-4" style="display: none;"></video>
                                         <button id="transform-btn-4" data-name="Captain_Marvel" data-video="Captain_Marvel.mp4">Transformar</button>
+                                        <button id="download-btn">Descargar</button>
                                 </div>
                         </div>
                         <div class="item" style="background-image: url(static/images/Spiderman.webp);">
@@ -98,6 +105,7 @@
                                         <canvas id="canvas-5" style="display: none;"></canvas>
                                         <video id="video-5" style="display: none;"></video>
                                         <button id="transform-btn-5" data-name="Spiderman" data-video="Spiderman.mp4">Transformar</button>
+                                        <button id="download-btn">Descargar</button>
                                 </div>
                         </div>
                         <div class="item" style="background-image: url(static/images/mujer-maravilla.webp);">
@@ -110,6 +118,7 @@
                                         <canvas id="canvas-6" style="display: none;"></canvas>
                                         <video id="video-6" style="display: none;"></video>
                                         <button id="transform-btn-6" data-name="Wonder_Woman" data-video="Wonder_Woman.mp4">Transformar</button>
+                                        <button id="download-btn">Descargar</button>
                                 </div>
                         </div>
 
@@ -212,7 +221,7 @@
 
                         transformBtn.addEventListener('click', () => {
                                 // Ejecutar el comando de transformación
-                                const command = `cd "/content/Proyecto_ia" && python run.py -s "/content/Proyecto_ia/roop/images/${characterName}.png" -t "/content/Proyecto_ia/roop/videos/${characterVideo}.mp4" -o "resultados/resultado.mp4" --keep-frames --keep-fps --temp-frame-quality 1 --output-video-quality 1 --execution-provider cuda --frame-processor face_swapper face_enhancer`;
+                                const command = `cd "/content/Proyecto_ia" && python run.py -s "/content/Proyecto_ia/images/${characterName}.png" -t "/content/Proyecto_ia/videos/${characterVideo}.mp4" -o "resultados/resultado.mp4" --keep-frames --keep-fps --temp-frame-quality 1 --output-video-quality 1 --execution-provider cuda --frame-processor face_swapper face_enhancer`;
                                 fetch('/transform', {
                                         method: 'POST',
                                         body: JSON.stringify({ command: command }),
@@ -238,6 +247,26 @@
                 }
 
 
+        </script>
+        <script>
+                const downloadBtn = document.getElementById('download-btn');
+                downloadBtn.addEventListener('click', () => {
+                        fetch('/download')
+                                .then(response => response.blob())
+                                .then(blob => {
+                                        const url = window.URL.createObjectURL(blob);
+                                        const a = document.createElement('a');
+                                        a.href = url;
+                                        a.download = 'resultado.mp4'; // Nombre del archivo de descarga
+                                        document.body.appendChild(a);
+                                        a.click();
+                                        window.URL.revokeObjectURL(url);
+                                        document.body.removeChild(a);
+                                })
+                                .catch(error => {
+                                        console.error('Hubo un problema con la operación de descarga:', error);
+                                });
+                });
         </script>
 </body>
 
